Resolves: tdf#148985 crash on searching for non-existing prefix

Change-Id: Ib89af12e75910adbd32abab5afceb9013dc51df2